samples/_failures_safe/1761624351_a532d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed579fea.c: In function ‘main’:
./samples/SAFE/__tmp_ed579fea.c:159:12: error: missing terminating " character
  159 |     printf("\
      |            ^~
./samples/SAFE/__tmp_ed579fea.c:159:5: error: expected expression at end of input
  159 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_ed579fea.c:159:5: error: expected declaration or statement at end of input
